--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Samsung Brand</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>Samsung</h1>
+        
+        <p>Technologies like...</p>
+        <img src="http://cdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-j7-2016-3.jpg" height=" 200">
+        <p>And animals like...</p>
+        <img >
+        <p>And eat food like...</p>
+        <img>
+    </body>
+</html>
