--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <body>
         <h1>Samsung</h1>
         
-        <p>Technologies like...</p>
+        <p>Technologies like phones, dishwashers, </p>
         <img src="http://cdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-j7-2016-3.jpg" height=" 200">
-        <p>And animals like...</p>
-        <img >
-        <p>And eat food like...</p>
-        <img>
+      
     </body>
 </html>
