--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
          <meta charset="utf-8">
        <style>
            .tech {
-           color: red
+           color: red;
+           background-color: blue;
+               
            }
         </style>
         
