--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1>Samsung</h1>
         <a class="tech">
-        <p>Technologies like phones, dishwashers, </p>
+        <p>Technologies like phones, dishwashers </p>
         </a>
       
     </body>
