--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <h1>Samsung</h1>
-        <p>Samsung was founded by Lee Byung-chul in 1938 as a trading company<br> Samsung has increasingly globalized its electronics]
-            in particular, its mobile phones and semiconductors have become its most important source of income
+        <p>Samsung was founded by Lee Byung-chul in 1938 as a trading company<br> Samsung has increasingly globalized its electronics
+            in particular,<br> its mobile phones and semiconductors have become its most important source of income
         There are many types of Samsung like phones, dishwashers, refrigerator, T.V </p>
         
       
