--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
           body {
               background-color: black;
            }
+           
+           .white {
+               background-color: white;
+           }
         </style>
         
     </head>
