--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
            .white {
                color: red;
            }
+           .red {
+               background-color: white;
+                }
         </style>
         
     </head>
     <body>
-        <h1>Samsung</h1>
+        <h1 class="red">Samsung</h1>
         <p class="white">Samsung was founded by Lee Byung-chul in 1938 as a trading company<br> Samsung has increasingly globalized its electronics
             in particular,<br> its mobile phones and semiconductors have become its most important source of income
         There are many types of Samsung like phones, dishwashers, refrigerator, T.V </p>
