--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
            }
            
            .white {
-               color: red;
+               background-color: white;
            }
            .red {
                background-color: white;
